--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     .chat-widget {
       width: 496.8px;
       height: 717.6px;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White background for the widget */
       border-radius: 40px 40px 20px 20px;
       box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
       display: none;
@@ -66,11 +66,11 @@
       display: flex;
     }
     .home-section {
-      background-color: #4B0082;
+      background-color: #4B0082; /* Dark purple for the home section header */
     }
     .home-header {
       padding: 20px;
-      color: #FFFFFF;
+      color: #FFFFFF; /* White for high contrast on the dark purple header */
     }
     .home-header h1 {
       font-size: 33px;
@@ -87,7 +87,7 @@
       overflow-y: auto;
       display: flex;
       flex-direction: column;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White background for the body */
     }
     .home-main {
       display: block;
@@ -97,7 +97,7 @@
     }
     .home-detail {
       display: none;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for detail sections */
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 10px;
@@ -117,18 +117,18 @@
     .home-detail-header .back-arrow {
       cursor: pointer;
       font-size: 24.75px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for arrows */
       margin-right: 10px;
       display: block;
     }
     .home-detail-header h2 {
       font-size: 22px;
       font-weight: 600;
-      color: #333333;
+      color: #333333; /* Dark gray for headers */
     }
     .home-detail-content p {
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for body text */
       line-height: 1.5;
       margin-bottom: 10px;
     }
@@ -137,7 +137,7 @@
     }
     .search-result {
       display: none;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for search results */
       border-radius: 8px;
       padding: 15px;
       margin-bottom: 10px;
@@ -154,31 +154,31 @@
     .search-result-header h2 {
       font-size: 22px;
       font-weight: 600;
-      color: #333333;
+      color: #333333; /* Dark gray for headers */
     }
     .search-result-header .clear-search {
       cursor: pointer;
       font-size: 19.25px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for actions */
     }
     .search-result-content p {
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       line-height: 1.5;
       margin-bottom: 10px;
     }
     .recent-chats-label {
       font-size: 16.5px;
-      color: #666666;
+      color: #666666; /* Medium gray for labels */
       margin-bottom: 5px;
     }
     .recent-message {
-      background-color: #FFFFFF;
+      background-color: #E6E6FA; /* Light purple for recent messages */
       padding: 12px 15px;
       border-radius: 10px;
       margin-bottom: 10px;
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -186,25 +186,31 @@
       transition: background-color 0.2s, color 0.2s;
     }
     .recent-message:hover {
-      background-color: #E6E6FA;
-      color: #333333;
+      background-color: #D8BFD8; /* Medium purple on hover */
+      color: #333333; /* Dark gray for hover text */
+    }
+    .recent-message img {
+      width: 20px;
+      height: 20px;
+      margin-right: 8px;
+      border-radius: 50%;
     }
     .recent-message .arrow {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for arrows */
       font-size: 24.75px;
     }
     .start-new-chat-label {
       font-size: 16.5px;
-      color: #666666;
+      color: #666666; /* Medium gray for labels */
       margin: 10px 0 5px 0;
     }
     .new-chat-option {
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for new chat option */
       padding: 12px 15px;
       border-radius: 10px;
       margin-bottom: 10px;
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -212,16 +218,16 @@
       transition: background-color 0.2s, color 0.2s;
     }
     .new-chat-option.disabled {
-      background-color: #E5E5E5;
-      color: #999999;
+      background-color: #E5E5E5; /* Light gray for disabled state */
+      color: #999999; /* Gray for disabled text */
       cursor: not-allowed;
     }
     .new-chat-option:hover:not(.disabled) {
-      background-color: #F5F5F5;
-      color: #800080;
+      background-color: #F5F5F5; /* Light gray on hover */
+      color: #9932CC; /* Medium-dark purple for hover text */
     }
     .new-chat-option .arrow {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for arrows */
       font-size: 24.75px;
     }
     .search-bar {
@@ -231,20 +237,20 @@
       border-radius: 20px;
       margin: 15px 0;
       font-size: 19.25px;
-      color: #333333;
-      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="%23800080" d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>') no-repeat 95% center;
+      color: #333333; /* Dark gray for text */
+      background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24"><path fill="%239932CC" d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"/></svg>') no-repeat 95% center;
       background-size: 16px;
     }
     .search-bar:hover::placeholder {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for placeholder on hover */
     }
     .home-item {
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for home items */
       padding: 12px 15px;
       border-radius: 10px;
       margin-bottom: 10px;
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       display: flex;
       justify-content: space-between;
       align-items: center;
@@ -252,35 +258,35 @@
       transition: background-color 0.2s, color 0.2s;
     }
     .home-item:hover {
-      background-color: #F5F5F5;
-      color: #800080;
+      background-color: #F5F5F5; /* Light gray on hover */
+      color: #9932CC; /* Medium-dark purple for hover text */
     }
     .home-item .arrow {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for arrows */
       font-size: 24.75px;
     }
     .pricing-link {
-      background-color: #F5F5F5;
+      background-color: #F5F5F5; /* Light gray for pricing link */
       padding: 12px 15px;
       border-radius: 10px;
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       cursor: pointer;
       transition: background-color 0.2s, color 0.2s;
     }
     .pricing-link:hover {
-      background-color: #E5E5E5;
-      color: #800080;
+      background-color: #E5E5E5; /* Slightly darker gray on hover */
+      color: #9932CC; /* Medium-dark purple for hover text */
     }
     .messages-header {
       padding: 12px 15px;
       display: flex;
       align-items: center;
       justify-content: space-between;
-      border-bottom: 1px solid #E5E5E5;
+      border-bottom: 1px solid #E5E5E5; /* Light gray border */
       position: sticky;
       top: 0;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for header */
       z-index: 1;
       flex-shrink: 0;
       height: 63px;
@@ -292,7 +298,7 @@
     .messages-header .back-arrow {
       cursor: pointer;
       font-size: 24.75px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for arrows */
       margin-right: 10px;
     }
     .messages-header .header-title {
@@ -304,22 +310,41 @@
       align-items: center;
       font-size: 22px;
       font-weight: 600;
-      color: #333333;
+      color: #333333; /* Dark gray for headers */
+    }
+    .messages-header .header-title .title img {
+      width: 16px;
+      height: 16px;
+      margin-right: 5px;
     }
     .messages-header .header-title .subtext {
       font-size: 16.5px;
-      color: #666666;
+      color: #666666; /* Medium gray for subtext */
     }
     .messages-header .download-icon {
       cursor: pointer;
       font-size: 22px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for icons */
+      position: relative;
+    }
+    .messages-header .download-icon:hover::after {
+      content: "Download Transcript";
+      position: absolute;
+      top: -30px;
+      right: 0;
+      background-color: #333333;
+      color: #FFFFFF;
+      padding: 5px 10px;
+      border-radius: 5px;
+      font-size: 14px;
+      white-space: nowrap;
+      z-index: 10;
     }
     .messages-body {
       flex: 1;
       padding: 15px;
       overflow-y: auto;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for chat body */
       scroll-behavior: smooth;
       min-height: 0;
       height: 0;
@@ -328,15 +353,15 @@
       width: 6px;
     }
     .messages-body::-webkit-scrollbar-track {
-      background: #E5E5E5;
+      background: #E5E5E5; /* Light gray for scrollbar track */
       border-radius: 10px;
     }
     .messages-body::-webkit-scrollbar-thumb {
-      background: #999999;
+      background: #999999; /* Gray for scrollbar thumb */
       border-radius: 10px;
     }
     .messages-body::-webkit-scrollbar-thumb:hover {
-      background: #666666;
+      background: #666666; /* Medium gray on hover */
     }
     .message {
       margin-bottom: 15px;
@@ -361,8 +386,8 @@
       display: inline-block;
     }
     .message.bot .bubble {
-      background-color: #FFFFFF;
-      color: #333333;
+      background-color: #FFFFFF; /* White for bot messages */
+      color: #333333; /* Dark gray for text */
       border-top-left-radius: 0;
       display: flex;
       flex-direction: column;
@@ -380,8 +405,8 @@
       height: 20px;
     }
     .message.user .bubble {
-      background-color: #FFFFFF;
-      color: #333333;
+      background-color: #E6E6FA; /* Light purple for user messages */
+      color: #333333; /* Dark gray for contrast */
       border-top-right-radius: 0;
       display: flex;
       flex-direction: column;
@@ -392,7 +417,7 @@
     }
     .message.user .timestamp {
       font-size: 16.5px;
-      color: #666666;
+      color: #666666; /* Medium gray for timestamps */
       align-self: flex-end;
       margin-top: 4px;
     }
@@ -401,8 +426,8 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      background-color: #FFFFFF;
-      border-top: 1px solid #E5E5E5;
+      background-color: #FFFFFF; /* White for footer */
+      border-top: 1px solid #E5E5E5; /* Light gray border */
       position: sticky;
       bottom: 0;
       z-index: 1;
@@ -423,17 +448,17 @@
     .input-row input {
       flex: 1;
       padding: 8px 12px;
-      border: 1px solid #E5E5E5;
+      border: 1px solid #E5E5E5; /* Light gray border */
       border-radius: 20px;
       outline: none;
       font-size: 19.25px;
       margin-right: 10px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
     }
     .send-btn, .mic-btn {
       width: 30px;
       height: 30px;
-      background-color: #800080;
+      background-color: #9932CC; /* Medium-dark purple for buttons */
       border: none;
       border-radius: 50%;
       cursor: pointer;
@@ -446,16 +471,16 @@
       height: 16px;
     }
     .mic-btn:hover, .send-btn:hover {
-      background-color: #4B0082;
+      background-color: #8A2BE2; /* Slightly lighter purple on hover */
     }
     .navbar {
       display: flex;
       justify-content: space-around;
       padding: 10px 0;
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for navbar */
       border-bottom-left-radius: 20px;
       border-bottom-right-radius: 20px;
-      border-top: 1px solid #E5E5E5;
+      border-top: 1px solid #E5E5E5; /* Light gray border */
       position: sticky;
       bottom: 0;
       z-index: 10;
@@ -467,23 +492,23 @@
       align-items: center;
       cursor: pointer;
       font-size: 16.5px;
-      color: #999999;
+      color: #999999; /* Gray for navbar text */
       padding: 5px;
     }
     .navbar div:hover {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple on hover */
     }
     .navbar div:hover svg path {
-      fill: #800080;
+      fill: #9932CC;
     }
     .navbar div.active {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for active tab */
     }
     .navbar div.active svg path {
-      fill: #800080;
+      fill: #9932CC;
     }
     .navbar div svg path {
-      fill: #999999;
+      fill: #999999; /* Gray for icons */
     }
     .message-icon {
       position: fixed;
@@ -491,7 +516,7 @@
       right: 20px;
       width: 50px;
       height: 50px;
-      background-color: #800080;
+      background-color: #9932CC; /* Medium-dark purple for message icon */
       border-radius: 50%;
       display: flex;
       align-items: center;
@@ -503,47 +528,47 @@
     .message-icon::before {
       content: '\1F4AC';
       font-size: 24px;
-      color: #FFFFFF;
+      color: #FFFFFF; /* White for contrast */
     }
     .dialog-container {
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for dialogs */
       border-radius: 10px;
       padding: 15px;
       margin-bottom: 10px;
     }
     .end-chat-btn {
-      background-color: #FFFFFF;
+      background-color: #FFFFFF; /* White for end chat button */
       padding: 12px 15px;
       border-radius: 10px;
       font-size: 19.25px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for text */
       text-align: center;
       cursor: pointer;
       margin: 10px 0;
       transition: background-color 0.2s, color 0.2s;
     }
     .end-chat-btn:hover {
-      background-color: #F5F5F5;
+      background-color: #F5F5F5; /* Light gray on hover */
     }
     .chat-ended-message {
       text-align: center;
       font-size: 19.25px;
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple for text */
       padding: 10px;
     }
     .warning-dialog {
-      background-color: rgba(230, 230, 250, 0.9);
-      border: 1px solid rgba(128, 0, 128, 0.3);
+      background-color: rgba(230, 230, 250, 0.9); /* Semi-transparent light purple */
+      border: 1px solid rgba(153, 50, 204, 0.3); /* Subtle medium-dark purple border */
       border-radius: 12px;
       padding: 15px;
       margin: 10px 0;
       font-size: 19.25px;
-      color: #333333;
+      color: #333333; /* Dark gray for text */
       text-align: center;
       position: relative;
       box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
       animation: fadeSlideIn 0.5s ease-out forwards;
-      backdrop-filter: blur(5px);
+      backdrop-filter: blur(5px); /* Frosted glass effect */
     }
     @keyframes fadeSlideIn {
       0% {
@@ -561,16 +586,16 @@
       right: 10px;
       cursor: pointer;
       font-size: 16.5px;
-      color: #666666;
+      color: #666666; /* Medium gray for close button */
       transition: color 0.2s;
     }
     .warning-dialog .close-btn:hover {
-      color: #800080;
+      color: #9932CC; /* Medium-dark purple on hover */
     }
     .warning-dialog .action-btn {
       margin-top: 10px;
-      background-color: #800080;
-      color: #FFFFFF;
+      background-color: #9932CC; /* Medium-dark purple for action button */
+      color: #FFFFFF; /* White for contrast */
       padding: 8px 16px;
       border-radius: 20px;
       cursor: pointer;
@@ -578,7 +603,7 @@
       transition: background-color 0.2s;
     }
     .warning-dialog .action-btn:hover {
-      background-color: #4B0082;
+      background-color: #8A2BE2; /* Slightly lighter purple on hover */
     }
     .typing-indicator .bubble {
       display: flex;
@@ -589,36 +614,29 @@
     }
     .typing-indicator .bubble span {
       display: inline-block;
-      width: 8px;
-      height: 8px;
-      background-color: #800080;
-      border-radius: 50%;
-      position: absolute;
-      animation: slide 1.5s infinite;
+      font-size: 19.25px;
+      color: #9932CC; /* Medium-dark purple for typing dots */
+      margin-right: 5px;
+      animation: float 1.5s infinite;
     }
     .typing-indicator .bubble span:nth-child(1) {
-      left: 0;
       animation-delay: 0s;
     }
     .typing-indicator .bubble span:nth-child(2) {
-      left: 10px;
       animation-delay: 0.3s;
     }
     .typing-indicator .bubble span:nth-child(3) {
-      left: 20px;
       animation-delay: 0.6s;
     }
-    @keyframes slide {
+    @keyframes float {
       0% {
-        opacity: 0;
-        transform: translateX(0);
+        transform: translateY(0);
       }
       50% {
-        opacity: 1;
+        transform: translateY(-5px);
       }
       100% {
-        opacity: 0;
-        transform: translateX(30px);
+        transform: translateY(0);
       }
     }
   </style>
@@ -741,7 +759,7 @@
     </div>
     <div class="navbar">
       <div id="home-tab" class="active">
-        <svg width="20" height="20" viewBox="0 0 24 24"><path fill="#800080" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
+        <svg width="20" height="20" viewBox="0 0 24 24"><path fill="#9932CC" d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"/></svg>
         <span>Home</span>
       </div>
       <div id="messages-tab">
@@ -780,6 +798,12 @@
           loadConversationsList();
         }
       } else if (tab === 'home') {
+        // Update isChatActive based on the current conversation's active state
+        if (currentConversationId && conversations[currentConversationId]) {
+          isChatActive = conversations[currentConversationId].active;
+        } else {
+          isChatActive = false;
+        }
         hideDetail();
         clearSearch();
         startTimestampUpdates();
@@ -895,8 +919,8 @@
 
     function loadConversation(conversationId) {
       currentConversationId = conversationId;
-      isChatActive = true;
       const conversation = conversations[conversationId];
+      isChatActive = conversation.active; // Set isChatActive based on the conversation's active state
       const chatBox = document.getElementById('chat-box');
       chatBox.innerHTML = '';
       let lastSender = null;
@@ -1098,7 +1122,6 @@
       messageDiv.className = 'message bot';
       const bubbleDiv = document.createElement('div');
       bubbleDiv.className = 'bubble';
-      const lastMessage = chatBox.lastElementChild;
       const senderSpan = document.createElement('span');
       senderSpan.className = 'sender';
       senderSpan.textContent = 'Chatbot';
@@ -1136,8 +1159,12 @@
       messageDiv.id = 'typing-indicator';
       const bubbleDiv = document.createElement('div');
       bubbleDiv.className = 'bubble';
+      const senderSpan = document.createElement('span');
+      senderSpan.className = 'sender';
+      senderSpan.textContent = 'Chatbot';
+      bubbleDiv.appendChild(senderSpan);
       const span = document.createElement('span');
-      span.innerHTML = '<span></span><span></span><span></span>';
+      span.innerHTML = '...';
       bubbleDiv.appendChild(span);
       messageDiv.appendChild(bubbleDiv);
       chatBox.appendChild(messageDiv);
